# airflow_steam

./: .gitignore  Dockerfile  README.md  app.py  app2.py  bin.py  dados_date_buy.xlsx  date_buy.csv  hello.py  inventory_data.csv  main.py  projeto.md  pyproject.toml  requirements.txt  transform.py
airflow/: Dockerfile  airflow_settings.yaml
airflow/.astro/: config.yaml
airflow/airflow_steam/: .user.yml  profiles.yml  requirements.txt
airflow/airflow_steam/models/marts/: agg_data_dbt.sql  cagr_data_dbt.sql  current_price_data_dbt.sql  daily_data_dbt.sql  last_price_data_dbt.sql
airflow/airflow_steam/models/sources/: sources.yml
airflow/airflow_steam/models/staging/: raw_data_date_buy_dbt.sql  raw_data_dbt.sql
airflow/dags/: dbt_dag.py
airflow/src/: app.py  db_connection.py
airflow_steam/: dbt_project.yml
airflow_steam/models/marts/: price_data_dbt.sql  volatility_data_dbt.sql  wallet_data_dbt.sql
airflow_steam/models/sources/: sources.yml
airflow_steam/models/staging/: raw_data.sql
airflow_steam/seeds/: date_buy_test.csv
src/: app.py  data_date_buy.CSV  db_connection.py
