[project]
name = "airflow-steam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-postgres>=1.9.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.43.2",
]
